Last minute text alignment fix for spell costs column

--- a/scss/components/_items.scss
+++ b/scss/components/_items.scss
@@ -128,9 +128,11 @@
 .item-cost-self {
   width: 50%;
   float: left;
+  text-align: center;
 }
 
 .item-cost-target {
   width: 50%;
   float: left;
+  text-align: center;
 }
